--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "express",
-  "version": "0.0.10",
+  "name": "@birdhousejs/express",
+  "version": "0.0.11",
   "description": "Birdhouse for express",
-  "main": "index.js",
-  "repository": "https://github.com/birdhousejs/express.git",
+  "main": "dist/index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/birdhousejs/express.git"
+  },
   "author": "Fran Jurmanović <fjurma12@outlook.com>",
   "license": "MIT",
   "scripts": {
     "build": "tsc --build"
   },
+  "files": ["dist/**"],
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -19,5 +23,12 @@
   },
   "devDependencies": {
     "@types/node": "^14.14.31"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/birdhousejs/express/issues"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
+  "homepage": "https://github.com/birdhousejs/express#readme"
 }
